Fix row wrap

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -35,10 +35,16 @@ header {
 
 container {
     display: flex;
-    flex-flow: row wrap;
+    flex-direction: row;
     align-items: flex-start;
     margin-bottom: 80px;
     padding: 30px;
+}
+
+@media screen and (min-width: 480px) {
+    container {
+	flex-flow: row wrap;
+    }
 }
 
 main {
@@ -82,7 +88,6 @@ footer {
     flex-flow: row wrap;
     align-items: flex-start;
     text-align: center;
-    width: 100%;
 }
 
 .form > div {
